[gd_scene load_steps=16 format=3 uid="uid://csc5spoe6gytn"]

[ext_resource type="Script" uid="uid://snt2nso5u6gf" path="res://scripts/test/grid_test_scene.gd" id="1_test_scene"]
[ext_resource type="Script" uid="uid://b4467vkiwr1sp" path="res://scripts/systems/grid/grid_manager.gd" id="2_grid_manager"]
[ext_resource type="Script" uid="uid://cwf2m77u8dvw1" path="res://scripts/systems/grid/grid_visualizer.gd" id="3_grid_visualizer"]
[ext_resource type="Material" path="res://resources/maps/grid_floor_material.tres" id="4_floor_material"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]
sky_top_color = Color(0.4, 0.6, 0.8, 1)
sky_horizon_color = Color(0.7, 0.8, 0.9, 1)
ground_bottom_color = Color(0.3, 0.3, 0.3, 1)
ground_horizon_color = Color(0.5, 0.5, 0.5, 1)

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_1"]
background_mode = 2
sky = SubResource("Sky_1")
ambient_light_source = 2
ambient_light_color = Color(0.8, 0.8, 0.8, 1)
ambient_light_energy = 0.5

[sub_resource type="PlaneMesh" id="PlaneMesh_floor"]
size = Vector2(16, 16)

[sub_resource type="BoxShape3D" id="BoxShape3D_floor"]
size = Vector3(16, 0.2, 16)

[sub_resource type="BoxMesh" id="BoxMesh_obstacle1"]
size = Vector3(2, 1, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_obstacle1"]
size = Vector3(2, 1, 2)

[sub_resource type="BoxMesh" id="BoxMesh_obstacle2"]
size = Vector3(3, 1, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_obstacle2"]
size = Vector3(3, 1, 2)

[sub_resource type="BoxMesh" id="BoxMesh_obstacle3"]
size = Vector3(2, 1, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_obstacle3"]
size = Vector3(2, 1, 3)

[node name="GridTestScene" type="Node3D"]
script = ExtResource("1_test_scene")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 0, 10, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 8, 17.32, 10)
fov = 50.0

[node name="GridManager" type="Node3D" parent="."]
script = ExtResource("2_grid_manager")
grid_width = 16
grid_height = 16

[node name="GridVisualizer" type="Node3D" parent="."]
script = ExtResource("3_grid_visualizer")
grid_manager_path = NodePath("../GridManager")
show_grid_lines = false
show_cells = false
show_walkable = false
show_blocked = false

[node name="Floor" type="Node3D" parent="."]

[node name="GridFloorMesh" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 8)
mesh = SubResource("PlaneMesh_floor")
surface_material_override/0 = ExtResource("4_floor_material")

[node name="FloorCollision" type="StaticBody3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -0.1, 8)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/FloorCollision"]
shape = SubResource("BoxShape3D_floor")

[node name="Obstacles" type="Node3D" parent="."]

[node name="Box1" type="MeshInstance3D" parent="Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0.5, 4)
mesh = SubResource("BoxMesh_obstacle1")

[node name="Box1Collision" type="StaticBody3D" parent="Obstacles/Box1"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Obstacles/Box1/Box1Collision"]
shape = SubResource("BoxShape3D_obstacle1")

[node name="Box2" type="MeshInstance3D" parent="Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0.5, 8)
mesh = SubResource("BoxMesh_obstacle2")

[node name="Box2Collision" type="StaticBody3D" parent="Obstacles/Box2"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Obstacles/Box2/Box2Collision"]
shape = SubResource("BoxShape3D_obstacle2")

[node name="Box3" type="MeshInstance3D" parent="Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0.5, 12)
mesh = SubResource("BoxMesh_obstacle3")

[node name="Box3Collision" type="StaticBody3D" parent="Obstacles/Box3"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Obstacles/Box3/Box3Collision"]
shape = SubResource("BoxShape3D_obstacle3")

[node name="UI" type="CanvasLayer" parent="."]

[node name="InfoLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 300.0
text = "Loading..."
